[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Janusz \"Ivellios\" Kamieński"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aoc-python-cli = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
